--- a/Jayson Marcello/HTML/personal-info.html
+++ b/Jayson Marcello/HTML/personal-info.html
@@ -67,7 +67,7 @@
     </header>
 
     <div class="container">
-        <img class="profile-img" src="jasu.jpg" alt="Profile Picture" width="200" height="200">
+        <img src="https://github.com/Jasutinn/School_Projects/blob/default/Jayson%20Marcello/HTML/Images/jasu.jpg" class="profile-img" alt="Profile Picture" width="200" height="200">
         <h2 class="name">Justine Dela Torre</h2>
 
         <div class="info">
