--- a/Jayson Marcello/HTML/personal-information.html
+++ b/Jayson Marcello/HTML/personal-information.html
@@ -1,5 +1,6 @@
 
 <!DOCTYPE html>
+<!--Jasutinn-->
 <html>
 <head>
     <title>Personal Information</title>
@@ -76,6 +77,7 @@
             <br>
             <h2>Contact Information</h2>
             <p>Email: justinevaughnr@outlook.com</p>
+            <br>
             <p>Phone: +639751823118</p>
             <br>
             <h2>Education (Example lang ‘to, sir, hahaha)</h2>
