--- a/Jayson Marcello/HTML/homepage_.html
+++ b/Jayson Marcello/HTML/homepage_.html
@@ -89,7 +89,7 @@
             <h2>Welcome to Engr. Dela Torre Law Firm</h2>
             <p>Defending Your Rights with Unyielding Expertise and Unparalleled Commitment – Your Trusted Advocates in Legal Excellence."</p>
             <!-- Updated href attribute for the Explore Services button -->
-            <a href="https://example.com/services" class="cta-button" target="_blank">Explore Services</a>
+            <a href="https://raw.githubusercontent.com/Jasutinn/School_Projects/default/Jayson%20Marcello/HTML/services.html" class="cta-button" target="_blank">Explore Services</a>
         </div>
     </section>
 
